grid_searches_lr_batch_10k_normal/task_19/errors/en-10k-batch=16-lr=0.001-type=bi-num_rnns=1-h_size=128-emb=256-dropout=0.7-cell_type=gru.error
  File "../../../main.py", line 269
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
